--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.90.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "swiper": "^12.0.3",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
